Final after-debug comit, which should solve all small bug noticed (online checking not working under Android 4.x, fixed by adding domain whitening; segment display final fix provided by it's author and not loading content, when presisted language is null, fixed by calling correct app). A small notice, that no one will ever read: I hate Ripple Emulator / Chrome, because it allows pages with certain bugs to work on desktop, when they actually fail to work on mobiles (due to these bugs).

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,5 +43,3 @@ kbd
  * Bootstrap fixup
  */
 .nav-tabs, .nav-pills {position: relative;}
-
-.tab-content {overflow: visible !important;}
